--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,5 +10,8 @@ steps:
             "--platform", "managed", "--region", "${_REGION}",
             "--image", "gcr.io/${PROJECT_ID}/${_SERVICE}"]
 
+images: 
+ - "gcr.io/${PROJECT_ID}/${_SERVICE}"
+
 substitutions:
     _REGION: us-central1
